--- a/index.html
+++ b/index.html
@@ -1,126 +1,204 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="styles/global.css">
-    <link rel="stylesheet" href="styles/header.css">
-    <link rel="stylesheet" href="styles/index.css">
-  </head>
-  <body>
-    <!-- Header Start-->
-    <div class="header-top">
-      <div class="header-top-fade">  
-        <div class="header-top-wrap">  
-          <div class="profile">
-            <div class="profile-background">
-              <img src="assets/profile.jpg">
-            </div>
-          </div>
-          <div class="text">
-            <h1>Joel Kuehne</h1>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="header-menu">
-      <ul class="header-menu-wrap">
-        <li><h5>About Me</h5></li>
-        <li><h5>Expereince</h5></li>
-        <li><h5>Projects</h5></li>
-        <li><h5>Hobbies</h5></li>
-      </ul>
-    </div>  
-    <!-- Header End -->
-    <!-- About Me Start -->
-    <div id="about-me" class="info-section">
-      <div class="about-me-wrap info-wrap">
-        <div class="about-me-text">
-          <h2>
-            About Me
-          </h2>
-          <p>
-            I'm a student who's currently attending the University of Minnesota Twin Cities to get my Bachelors in Computer Engineering.
-            Ever since my first day in robotics, I knew that i had a passion for programming. It is my goal to
-            take that passion and turn it into a carrer.
-          </p>
-          <p>
-            Over the sumemr of 2022, I interned at <a href="https://thenstep.com/">The Next Step</a>. I was responsible making and maintinaing websites
-            for various clients. You can read more about my work at TNS in the experience section.
-          </p>
-          <p>
-            As far as languages go, I've done most of my work in C++, but I am also familiar with C# .NET. I've also dabbled with
-            a little bit of web development in PHP, HTML, and JavaScript that I used at my job at The Next Step.
-          </p>
-          <div class="languages">
-            <div class="language-wrap">
-              <img src="assets/cpp.png">
-            </div>
-            <div class="language-wrap">
-              <img src="assets/cs.png">
-            </div>
-            <div class="language-wrap">
-              <img src="assets/HTML.png">
-            </div>
-            <div class="language-wrap">
-              <img src="assets/JS.png">
-            </div>
-            <div class="language-wrap">
-              <img src="assets/CSS.png">
-            </div>
-          </div>
-        </div>
-        <div class="about-me-links">
-          <div class="about-me-links-wrap">
-            <div class="about-me-links-table">
-              <div class="about-me-link-wrap">
-                <button class="button gh-but" href="https://github.com/JoelKueh">
-                  <span>GitHub</span>
-                </button>
-              </div>
-              <div class="about-me-link-wrap">
-                <button class="button ot-but" href="">
-                  <span>Other</span>
-                </button>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-    <!-- About Me End -->
-    <!-- Projects Start -->
-    <div id="projects" class="info-section">
-      <div class="projects-wrap info-wrap">
-        <div class="projects-text">
-          <h2>
-            Projects
-          </h2>
-          <p>
-            As I said before, programming is both my passion and my hobby. As a result. I have built up a wide 
-          </p>
-        </div>
-        <div class="about-me-link">
-        </div>
-      </div>
-    </div>
-    <!-- Projects End -->
-    <!-- Experience Start -->
-    <div id="experience" class="info-section">
-      <div class="experience-wrap info-wrap">
-        <div class="experience-text">
-          <h2>
-            Experience
-          </h2>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, nam aperiam? Odit quibusdam veniam soluta suscipit voluptas omnis quo? Itaque aliquam, in nam dolores ipsum recusandae, velit accusantium voluptatem id officiis maiores provident ab iste nemo tempora nulla eveniet! Quasi necessitatibus optio beatae voluptatem earum quo, ab dolorum vitae cumque.
-          </p>
-        </div>
-        <div class="experience-link">
-        </div>
-      </div>
-    </div>
-    <!-- Experience End -->
-  </body>
+	<head>
+		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta http-equiv="X-UA-Compatible" content="ie=edge">
+		<link rel="stylesheet" href="styles/global.css">
+		<link rel="stylesheet" href="styles/header.css">
+		<link rel="stylesheet" href="styles/index.css">
+	</head>
+	<body>
+		<!-- Header Start-->
+		<div class="header-top">
+			<div class="header-top-fade">  
+				<div class="header-top-wrap">  
+					<div class="profile">
+						<div class="profile-background">
+							<img src="assets/profile.jpg">
+						</div>
+					</div>
+					<div class="text">
+						<h1>Joel Kuehne</h1>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="header-menu">
+			<ul class="header-menu-wrap">
+				<li><h5>About Me</h5></li>
+				<li><h5>Expereince</h5></li>
+				<li><h5>Projects</h5></li>
+				<li><h5>Hobbies</h5></li>
+			</ul>
+		</div>  
+		<!-- Header End -->
+		<!-- About Me Start -->
+		<div id="about-me" class="info-section">
+			<div class="about-me-wrap info-wrap">
+				<div class="about-me-text">
+					<h2>
+						About Me
+					</h2>
+					<p>
+					I'm a student who's currently attending the University of Minnesota Twin Cities to get my Bachelors in Computer Engineering.
+					Ever since my first day in robotics, I knew that I had a passion for programming. It is my goal to
+					take that passion and turn it into a carrer.
+					</p>
+					<p>
+					As far as languages go, I've done most of my work in C++, but I am also familiar with C# .NET. I've also dabbled with
+					a little bit of web development in PHP, HTML, and JavaScript that I used at my job at The Next Stepassets.
+					</p>
+					<div class="languages">
+						<div class="language-wrap">
+							<img src="assets/cpp.png">
+						</div>
+						<div class="language-wrap">
+							<img src="assets/CS.png">
+						</div>
+						<div class="language-wrap">
+							<img src="assets/HTML.png">
+						</div>
+						<div class="language-wrap">
+							<img src="assets/JS.png">
+						</div>
+						<div class="language-wrap">
+							<img src="assets/CSS.png">
+						</div>
+					</div>
+				</div>
+				<div class="links">
+					<div class="links-wrap">
+						<div class="links-table">
+							<div class="link-wrap">
+								<button class="button gh-but" href="https://github.com/JoelKueh">
+									<span>GitHub</span>
+								</button>
+							</div>
+							<div class="link-wrap">
+								<button class="button ot-but" href="">
+									<span>Other</span>
+								</button>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<!-- About Me End -->
+		<!-- Projects Start -->
+		<div id="projects" class="info-section">
+			<div class="projects-wrap info-wrap">
+				<div class="projects-text">
+					<h2>
+						Projects
+					</h2>
+					<p>
+					As I said before, programming is both my passion and my hobby. As a result, I have gained a wide variety of different experiences through various personal projects that I have done. 
+					</p>
+					<p>
+					From a command line chess game to a DirectX11 based Mandelbrot Set Renderer, you can read more about some of my personal projects in the links on the right. (More on my GitHub).
+					</p>
+				</div>
+				<div class="links">
+					<div class="links-wrap">
+						<div class="links-table">
+							<div class="link-wrap">
+								<button class="button gh-but" href="projects/MandelbrotSet">
+									<span>MandelbrotSet</span>
+								</button>
+							</div>
+							<div class="link-wrap">
+								<button class="button ot-but" href="projects/JChessV2">
+									<span>JChessV2</span>
+								</button>
+							</div>
+							<div class="link-wrap">
+								<button class="button ot-but" href="projects/2022RobotCode">
+									<span>RobotCode</span>
+								</button>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<!-- Projects End -->
+		<!-- Experience Start -->
+		<div id="experience" class="info-section">
+			<div class="experience-wrap info-wrap">
+				<h2>
+					Team Experience
+				</h2>
+				<div class="UKO">
+					<div class="UKO-text">
+						<h3>
+							University Kernel Object (U.ko)
+						</h3>
+						<p>
+						Since Fall 2022, I've been working with a group called the University Kernel Object. In essence, we are a group of UMNTC students who are really passionate
+						about the Linux Kernel. Led by a couple of University Professors as well as a Kernel maintainer, we have been exploring different aspects of the Linux Kernel and learning
+						about Kernel development. You can read more about us in the links on the right.
+						</p>
+					</div>
+					<div class="links">
+						<div class="links-table">
+							<div class="link-wrap">
+								<button class="button gh-but" href="https://github.com/UMN-Kernel-Object">
+									<span>U.ko Github</span>
+								</button>
+							</div>
+							<div class="link-wrap">
+								<button class="button ot-but" href="experience/virtmem">
+									<span>U.ko Virtmem</span>
+								</button>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="TNS">
+					<div class="TNS-text">
+						<h3>
+							The Next Step (TNS)
+						</h3>
+						<p>
+						Over the summer of 2022, I interned at <a href="https://thenstep.com/">The Next Step</a>. I was responsible making and maintinaing websites
+						for various clients. You can read more about my work at TNS in the links on the right.
+						</p>
+					</div>
+					<div class="links">
+						<div class="links-table">
+							<div class="link-wrap">
+								<button class="button ot-but" href="experience/the-next-step">
+									<span>The Next Step</span>
+								</button>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="Robotics">
+					<div class="TNS-text">
+						<h3>
+							First Robotics Competition (Tobor 2143)
+						</h3>
+						<p>
+						First Robotics Competition (FRC) was the first thing that got me into programming. It helped me develop a passion for programming and taught
+						me a lot of what I know today. For this reason, I like to give back some of my time throughout the year to help other kids enjoy it as much as I did.
+						Robotics was one of my favorite parts of high school, so I'm thankful that I have gotten to stay active in it as a programming mentor for my old team.
+						</p>
+					</div>
+					<div class="links">
+						<div class="links-table">
+							<div class="link-wrap">
+								<button class="button ot-but" href="experience/the-next-step">
+									<span>The Next Step</span>
+								</button>
+							</div>
+						</div>
+					</div>
+
+			</div>
+		</div>
+		<!-- Experience End -->
+	</body>
 </html>
