--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 					take that passion and turn it into a carrer.
 					</p>
 					<p>
-					As far as languages go, I've done most of my work in C++, but I am also familiar with C# .NET and Python. I've also dabbled with
+					As far as languages go, I've done most of my work in C++, but I am also familiar with C# .NET, Java, and Python. I've also dabbled with
 					a little bit of web development in PHP, HTML, and JavaScript that I used at my job at The Next Step.
 					</p>
 					<div class="languages">
