--- a/index.html
+++ b/index.html
@@ -65,6 +65,15 @@
 							<img src="assets/JS.png">
 						</div>
 					</div>
+					<p>
+					I'm very driven by my desire to learn and explore. This has led me to work hard at school and in my previous
+					jobs as well as work on various personal programming projects.
+					</p>
+					<p>
+					I'm currently taking two electrical enginerring courses (EE 2115: Analog and Digital Electronics and EE 2301: Introduction to Digital System Design).
+					I'm also taking two computer science courses (CSCI 1913:Introduction to Algorithms and Program Dev. and CSCI 2011: Discrete Structures of Computer Science).
+					I have also already taken both Linear Algebra and Diff. Eq. and Multivariable Calculus.
+					</p>
 				</div>
 				<div class="links">
 					<div class="links-wrap">
