--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 						<p>
 						JChessV2 is a C++ remake of a Chess game I made in C# called JChess. The project was designed to be the base of a Chess AI that I will start writing soon.
 						As a chess AI needs to look through hundreds of millions of positions every time it makes a decision. I worked very hard to make sure that move generation
-						would be as fast as possible. The move generation algorighms make use of lookup tables and bithacks to efficiently generate moves. After multiple iterations
+						would be as fast as possible. The move generation algorithms make use of lookup tables and bithacks to efficiently generate moves. After multiple iterations
 						and hous upon hours of reading move generation theory on <a href="https://www.chessprogramming.org/">ChessProgramming.org</a>, I managed to search through
 						chess positions at 43 million nodes per second on a single thread.
 						</p>
@@ -143,7 +143,7 @@
 						</h3>
 						<p>
 						In the spring of my senior year of high school, I really took an interest in the Mandelbrot Set. If you haven't heard of it, it's a fractal produced by a
-						relatively simple recursive algorithm. If the algorithm converges for a given point on the complex plane, then you plot a black point, if the algorighm
+						relatively simple recursive algorithm. If the algorithm converges for a given point on the complex plane, then you plot a black point, if the algorithm
 						diverges for a given point, you plot a white point (in reality, most people plot a color based on the number of iterations it took for the result to reach
 						some escape radius). The set of all points where the algorithm converges is the Mandelbrot Set.
 						</p>
